# action-board

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  FORM-ANSWERS.md  PUBLISH.md  README.md  SECURITY.md  SUBMISSION.md  app.json  manifest.json  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
bundle/: app.js  board.js  i18n.js  index.html  parser.js  preview.html  style.css  vercel.json
executas/triage-node/: executa.json  package.json  plugin.js
executas/triage-python/: executa.json  plugin.py  pyproject.toml
fixtures/: meeting-notes-long.txt  mock-sampling.jsonl  sample-notes.txt  slack-braindump.txt
scripts/: capture-shots.mjs  set-tool-id.mjs
tests/: board.test.mjs  e2e-harness.test.mjs  i18n.test.mjs  mock-host.test.mjs  parser.test.mjs  python-parity.mjs  replay.mjs  run-all.mjs  ui-smoke.mjs
