[project]
name = "action-triage"
version = "0.1.0"
description = "Anna Executa tool: extract structured action items from raw notes"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
action-triage = "plugin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["plugin.py"]

[tool.hatch.build.targets.wheel.sources]
"plugin.py" = "plugin.py"
